# azure-ee-template

./: .env.sample  .gitignore  CLAUDE.md  README.md
deployments/: neo4j_deploy.py  pyproject.toml
deployments/src/: __init__.py  constants.py  deployment.py  m2m_setup.py  models.py  orchestrator.py  setup.py  validation.py
infra/: main.bicep
infra/cloud-init/: cluster.yaml  standalone.yaml
infra/modules/: identity.bicep  loadbalancer.bicep  network.bicep  vmss.bicep
keycloak-infra/: Dockerfile  README.md  deploy.sh  keycloak_architecture.md  main.bicep  registry.bicep
keycloak-infra/modules/: environment.bicep  identity.bicep  keycloak.bicep  registry.bicep
keycloak-test-client/: README.md  keycloak.sh  pyproject.toml  realm-export.json  test_keycloak.py
oauth-java/: README.md  build.gradle.kts  run.sh  settings.gradle.kts
oauth-java/src/main/java/com/neo4j/keycloak/: KeycloakTestClient.java
validate-bearer-token/: README.md  pyproject.toml  validate_bearer.py
