[project]
name = "validate-bearer-token"
version = "0.1.0"
description = "Validate Neo4j M2M bearer token authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msal>=1.28.0",
    "neo4j>=5.20.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
validate-bearer = "validate_bearer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["validate_bearer.py"]

[tool.hatch.build.targets.sdist]
only-include = ["validate_bearer.py", "README.md", "pyproject.toml"]
